--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
